--- a/index.html
+++ b/index.html
@@ -234,6 +234,66 @@
                 <a href="#!" class="btn btn--green">Discover All tours</a>
             </div>
         </section>
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="./img/video.mp4" type="video/mp4">
+                    <source src="./img/video.webm" type="video/webm">
+                    Your browser is not supported
+                </video>
+            </div>
+            <div class="u-center-text u-margin-bottom-mid">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img class="story__img" src="./img/nat-9.jpg" alt="Natours">
+                        <figcaption class="story__caption">
+                            Jack Wilson
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary">
+                            WOW! This Changed my life.
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nulla, et minus atque dolorem
+                            ex eligendi obcaecati.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex voluptatibus libero similique.
+                            Numquam d totam, eveniet </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img class="story__img" src="./img/nat-8.jpg" alt="Natours">
+                        <figcaption class="story__caption">
+                            Marry Smith
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary">
+                            I had the best week ever with my family.
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nulla, et minus atque dolorem
+                            ex eligendi obcaecati.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex voluptatibus libero similique.
+                            Numquam totam eveniet dolore obcaecati. Quas quis id totam, eveniet </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="u-center-text u-margin-bottom-mid">
+                <a href="#!" class="btn-text">
+                    Read all stories &rarr;
+                </a>
+            </div>
+
+        </section>
     </main>
     <!-- <section class="grid-test">
         <div class="row">
