--- a/index.html
+++ b/index.html
@@ -294,6 +294,48 @@
             </div>
 
         </section>
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#!" class="form">
+                            <div class="u-margin-bottom-small">
+                                <h2 class="heading-secondary">
+                                    Start booking now
+                                </h2>
+                            </div>
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholder="full name" id="name" required>
+                                <label class="form__label" for="name">Full name</label>
+                            </div>
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholder="email" id="email" required>
+                                <label class="form__label" for="email">email</label>
+                            </div>
+                            <div class="form__group u-margin-bottom-big">
+                                <div class="form__radio-group">
+                                    <input type='radio' class="form__radio-input" id="small" name="size">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-btn"></span>
+                                        Small tour group</label>
+                                </div>
+                                <div class="form__radio-group">
+                                    <input type='radio' class="form__radio-input" id="Large" name="size">
+                                    <label for="Large" class="form__radio-label">
+                                        <span class="form__radio-btn"></span>
+                                        Large tour group</label>
+                                </div>
+                            </div>
+                            <div class="form__group">
+                                <button class="btn btn--green">
+                                    Next Step
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- <section class="grid-test">
         <div class="row">
