--- a/index.html
+++ b/index.html
@@ -15,6 +15,35 @@
 </head>
 
 <body>
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
+        <label for="nav-toggle" class="navigation_btn">
+            MENU
+        </label>
+        <div class="navigation_background">
+            &nbsp;
+        </div>
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#!" class="navigation__link">
+                        About Natours
+                    </a></li>
+                <li class="navigation__item"><a href="#!" class="navigation__link">
+                        Year benefits
+                    </a></li>
+                <li class="navigation__item"><a href="#!" class="navigation__link">
+                        Popular tours
+                    </a></li>
+                <li class="navigation__item"><a href="#!" class="navigation__link">
+                        Stories
+                    </a></li>
+                <li class="navigation__item"><a href="#!" class="navigation__link">
+                        Book now
+                    </a></li>
+            </ul>
+        </nav>
+    </div>
+
     <header class="header">
         <div class="header__logo-box">
             <img src="./img/logo-white.png" alt="Natours" class="header__logo" />
@@ -336,6 +365,45 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img class="footer__logo" src="img/logo-green-2x.png" alt="Full Logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="" class="footer__link">
+                                    Company
+                                </a></li>
+                            <li class="footer__item"><a href="" class="footer__link">
+                                    Contact us
+                                </a></li>
+                            <li class="footer__item"><a href="" class="footer__link">
+                                    Carriers
+                                </a></li>
+                            <li class="footer__item"><a href="" class="footer__link">
+                                    Privacy Policy
+                                </a></li>
+                            <li class="footer__item"><a href="" class="footer__link">
+                                    Terms
+                                </a></li>
+
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        <a href="" class="footer__link">
+                            supriyo mondal
+                        </a>
+                        Et soluta consectetur similique
+                        reiciendis iste optio quas modi. Necessitatibus!
+                    </p>
+                </div>
+            </div>
+        </footer>
     </main>
     <!-- <section class="grid-test">
         <div class="row">
