--- a/index.html
+++ b/index.html
@@ -17,28 +17,30 @@
 <body>
     <div class="navigation">
         <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
-        <label for="nav-toggle" class="navigation_btn">
-            MENU
+        <label for="nav-toggle" class="navigation__btn">
+            <snap class="navigation__icon">
+                &nbsp;
+            </snap>
         </label>
-        <div class="navigation_background">
+        <div class="navigation__background">
             &nbsp;
         </div>
         <nav class="navigation__nav">
             <ul class="navigation__list">
                 <li class="navigation__item"><a href="#!" class="navigation__link">
-                        About Natours
+                        <span>01</span> About Natours
                     </a></li>
                 <li class="navigation__item"><a href="#!" class="navigation__link">
-                        Year benefits
+                        <span>02</span> Year benefits
                     </a></li>
                 <li class="navigation__item"><a href="#!" class="navigation__link">
-                        Popular tours
+                        <span>03</span> Popular tours
                     </a></li>
                 <li class="navigation__item"><a href="#!" class="navigation__link">
-                        Stories
+                        <span>04</span> Stories
                     </a></li>
                 <li class="navigation__item"><a href="#!" class="navigation__link">
-                        Book now
+                        <span>05</span> Book now
                     </a></li>
             </ul>
         </nav>
