--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                         $297
                                     </p>
                                 </div>
-                                <a href="#!" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                                         $497
                                     </p>
                                 </div>
-                                <a href="#!" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                                         $797
                                     </p>
                                 </div>
-                                <a href="#!" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -406,6 +406,30 @@
                 </div>
             </div>
         </footer>
+        <div id="popup" class="popup">
+            <div class="popup__content">
+                <a href="#!" class="popup__close">X</a>
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" class="popup__img" alt="Tour Photo">
+                    <img src="img/nat-9.jpg" class="popup__img" alt="Tour Photo">
+                </div>
+                <div class="popup__right">
+                    <h2 class="heading-secondary">
+                        Start Booking now
+                    </h2>
+                    <h3 class="heading-tertiary">
+                        Important &dash; Please read the terms before booking.
+                    </h3>
+                    <p class="popup__text">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam porro similique reprehenderit
+                        quae delectus ratione omnis.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero hic minus perspiciatis eos
+                        cumque temporibus a illum doloribus velit totam.
+                    </p>
+                    <a href="#!" class="btn btn--green">Book Now!</a>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- <section class="grid-test">
         <div class="row">
