--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
+                        <!-- <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                            sizes="[max-width: 900px] 20vw ,[max-width: 600px] 30vw , 300px " alt="Story Image"
+                            class="composition__photo composition__photo--p1" img src="img/nat-1-large.jpg"> -->
+
                         <img src="img/nat-1-large.jpg" alt="Natours" class="composition__photo composition__photo--p1">
                         <img src="img/nat-2-large.jpg" alt="Natours" class="composition__photo composition__photo--p2">
                         <img src="img/nat-3-large.jpg" alt="Natours" class="composition__photo composition__photo--p3">
@@ -369,7 +373,11 @@
         </section>
         <footer class="footer">
             <div class="footer__logo-box">
-                <img class="footer__logo" src="img/logo-green-2x.png" alt="Full Logo">
+                <picture class="footer__logo">
+                    <source srcset="img/logo-green-small-1x.png 1x,img/logo-green-small-2x.png 2x"
+                        media="(max-width: 37.5rem)">
+                    <img srcset="img/logo-green-1x.png ,img/logo-green-2x.png" alt="Full Logo">
+                </picture>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
